sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:6: error: reassignment to val
	var exitCroissant=Int=0;
                             ^AlgCocktailSort3:7: error: reassignment to val
	var exitDecroissant=Int=0;
                               ^